Skip to content

qml: Items in the "Albums" section of MusicArtist.qml are not sorting with respect to their "Titles"

Hello Sir @chub @robUx4 @jagannatharjun ,

The Albums section of MusicArtist.qml are not sorting with respect to their Titles, instead they are sorting with release_year.

Could you please provide the details and respective files to be look upon.

Thank You.

Screenshot (47).png

Edited by Darshan Jain
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information