qt: mlalbummodel: Sort Title by Alphabetical Order

The view in MusicArtistsAlbums was incorrectly trying to sort Albums
from an Artist by "Album" which would resort to sorting them by
releasing date.

This commit change the sorting order for "title" to "alphabetical",
matching it with how the roleToCriteria defines the order:

  case ALBUM_TITLE:
  return VLC_ML_SORTING_ALPHA;

 Fixes: #28505