modules/gui/qt/medialibrary/mlalbummodel.cpp
@@ -22,7 +22,7 @@
 
 QHash<QByteArray, vlc_ml_sorting_criteria_t> MLAlbumModel::M_names_to_criteria = {
     {"id", VLC_ML_SORTING_DEFAULT},
-    {"title", VLC_ML_SORTING_ALBUM},
+    {"title", VLC_ML_SORTING_ALPHA},
     {"release_year", VLC_ML_SORTING_RELEASEDATE},
     {"main_artist", VLC_ML_SORTING_ARTIST},
     //{"nb_tracks"},
